# backend/src/main/java/fr/fullstack/backend/entity/Order.java
@@ -1,0 +1,27 @@
+package fr.fullstack.backend.entity;
+
+import jakarta.persistence.*;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Entity
+@Table(name = "\"orders\"") // 'orders' est un mot réservé en SQL, les guillemets l'échappent pour la génération
+@Getter
+@Setter
+@NoArgsConstructor
+public class Order {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Integer id;
+
+    @Column(name = "user_id", nullable = false)
+    private Integer userId;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "games_id")
+    private Game game;
+
+    @Column(name = "key", length = 17, nullable = false)
+    private String key;
+}
