# backend/src/main/java/fr/fullstack/backend/entity/SteamKey.java
@@ -6,15 +6,19 @@ import lombok.NoArgsConstructor;
 import lombok.Setter;
 
 @Entity
-@Table(name = "companies")
+@Table(name = "steamkeys")
 @Getter
 @Setter
 @NoArgsConstructor
-public class Company {
+public class SteamKey {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Integer id;
 
-    @Column(length = 300, unique = true, nullable = false)
-    private String name;
+    @Column(name = "key", length = 17, nullable = false)
+    private String key;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "games_id")
+    private Game game;
 }
